feat: change the way of creating empty list